# what-is-this-and-how-did-it-end-up-on-my-computer

./: .gitignore  CMakeLists.txt  README.md  cloud.cpp  cloud.hpp  kd_tree.cpp  kd_tree.hpp  main.cpp  point.hpp  render_output.cpp  render_output.hpp  rng.cpp  rng.hpp  shader_sources.cpp  shader_sources.hpp  window.cpp  window.hpp
cmake/: FindEigen3.cmake
